# ChangeLog file for MonetDB5
# This file is updated with Maddlog

* Thu Dec  3 2015 Sjoerd Mullender <sjoerd@acm.org>
- Removed algebra.antijoin.  Use algebra.subantijoin or
  algebra.subthetajoin instead.

* Mon Nov 23 2015 Martin Kersten <mk@cwi.nl>
- The MAL function 'leftfetchjoin' is renamed to its relational algebra
  version 'projection'

* Sat Nov  7 2015 Martin Kersten <mk@cwi.nl>
- The generic property handling scheme has been removed. It was used in
  just a few places, for widely different purposes and contained cruft.

* Mon Oct 26 2015 Sjoerd Mullender <sjoerd@acm.org>
- Removed functions str.iconv and str.codeset.  Internally, strings are
  always in UTF-8 encoding, so we can't allow code set conversions.

* Wed Oct  7 2015 Sjoerd Mullender <sjoerd@acm.org>
- Removed algerbra.like with a BAT argument.  Use algebra.likesubselect
  instead.

* Wed Sep 16 2015 Sjoerd Mullender <sjoerd@acm.org>
- Removed algebra.leftjoin.  Use algebra.subleftjoin or
  algebra.projection instead.
- Removed algebra.tdiff and algebra.tinter.

* Mon Sep 14 2015 Sjoerd Mullender <sjoerd@acm.org>
- Removed algebra.sample.  Use sample.subuniform instead.

* Fri Sep 11 2015 Sjoerd Mullender <sjoerd@acm.org>
- Removed algebra.select.  Use algebra.subselect instead.

* Wed Sep  9 2015 Sjoerd Mullender <sjoerd@acm.org>
- Removed algebra.revert.

* Tue Sep  8 2015 Sjoerd Mullender <sjoerd@acm.org>
- Removed bat.order and bat.orderReverse functions.

* Mon Sep  7 2015 Sjoerd Mullender <sjoerd@acm.org>
- Changed client.getUsers to return two bats, one with the user id
  and one with the user name.

* Sun Sep  6 2015 Sjoerd Mullender <sjoerd@acm.org>
- Implemented algebra.subdiff and algebra.subinter.

* Sat Sep  5 2015 Sjoerd Mullender <sjoerd@acm.org>
- Removed algebra.tdifference and algebra.tintersect.

* Fri Aug 14 2015 Sjoerd Mullender <sjoerd@acm.org>
- Removed algebra.tunion.
