@@ -32,28 +32,28 @@ exit tj_a;
 exit sj_a;
     mdb.setDebug(dbgmsk_restore);
     t := alarm.time();
-    (vg_a,xg_b) := algebra.join(int_1M,int_1M);
+    (vg_a,xg_b) := algebra.subjoin(int_1M,int_1M,nil:BAT,nil:BAT,false,nil:lng);
     wg_a := aggr.count(vg_a);
     xg_a := io.printf("#count %d = ",wg_a);
     x := alarm.time();
     yg_a := calc.-(x,t);
     ah_a := io.printf("%d ms\n",yg_a);
     t := alarm.time();
-    (vg_a,xg_b) := algebra.join(int_1M,int_1M);
+    (vg_a,xg_b) := algebra.subjoin(int_1M,int_1M,nil:BAT,nil:BAT,false,nil:lng);
     wg_a := aggr.count(vg_a);
     xg_a := io.printf("#count %d = ",wg_a);
     x := alarm.time();
     yg_a := calc.-(x,t);
     ah_a := io.printf("%d ms\n",yg_a);
     t := alarm.time();
-    (vg_a,xg_b) := algebra.join(int_1M,int_1M);
+    (vg_a,xg_b) := algebra.subjoin(int_1M,int_1M,nil:BAT,nil:BAT,false,nil:lng);
     wg_a := aggr.count(vg_a);
     xg_a := io.printf("#count %d = ",wg_a);
     x := alarm.time();
     yg_a := calc.-(x,t);
     ah_a := io.printf("%d ms\n",yg_a);
     t := alarm.time();
-    (vg_a,xg_b) := algebra.join(int_1M,int_1M);
+    (vg_a,xg_b) := algebra.subjoin(int_1M,int_1M,nil:BAT,nil:BAT,false,nil:lng);
     wg_a := aggr.count(vg_a);
     xg_a := io.printf("#count %d = ",wg_a);
     x := alarm.time();
@@ -73,28 +73,28 @@ exit tj_b;
 exit sj_b;
     mdb.setDebug(dbgmsk_restore);
     t := alarm.time();
-    (vg_b,z) := algebra.join(M2,M2);
+    (vg_b,z) := algebra.subjoin(M2,M2,nil:BAT,nil:BAT,false,nil:lng);
     wg_b := aggr.count(vg_b);
     xxx := io.printf("#count %d = ",wg_b);
     x := alarm.time();
     zzz := calc.-(x,t);
     ah_b := io.printf("%d ms\n",zzz);
     t := alarm.time();
-    (vg_b,z) := algebra.join(M2,M2);
+    (vg_b,z) := algebra.subjoin(M2,M2,nil:BAT,nil:BAT,false,nil:lng);
     wg_b := aggr.count(vg_b);
     xxx := io.printf("#count %d = ",wg_b);
     x := alarm.time();
     zzz := calc.-(x,t);
     ah_b := io.printf("%d ms\n",zzz);
     t := alarm.time();
-    (vg_b,z) := algebra.join(M2,M2);
+    (vg_b,z) := algebra.subjoin(M2,M2,nil:BAT,nil:BAT,false,nil:lng);
     wg_b := aggr.count(vg_b);
     xxx := io.printf("#count %d = ",wg_b);
     x := alarm.time();
     zzz := calc.-(x,t);
     ah_b := io.printf("%d ms\n",zzz);
     t := alarm.time();
-    (vg_b,z) := algebra.join(M2,M2);
+    (vg_b,z) := algebra.subjoin(M2,M2,nil:BAT,nil:BAT,false,nil:lng);
     wg_b := aggr.count(vg_b);
     xxx := io.printf("#count %d = ",wg_b);
     x := alarm.time();
