@@ -176,24 +176,12 @@ comment "Select all unique values from the tail of the input.
 # @+ Join operations
 # The core of every relational engine.
 # The join collection provided by the GDK kernel.
-command join( left:bat[:oid,:any_1], right:bat[:oid,:any_1])
-		(l:bat[:oid,:oid],r:bat[:oid,:oid])
-address ALGjoin2
-comment "Returns 2 columns with all BUNs, consisting of the head-oids
-	  from 'left' and 'right' for which there are BUNs in 'left'
-	  and 'right' with equal tails";
-
 command crossproduct( left:bat[:oid,:any_1], right:bat[:oid,:any_2])
 		(l:bat[:oid,:oid],r:bat[:oid,:oid])
 address ALGcrossproduct2
 comment "Returns 2 columns with all BUNs, consisting of the head-oids
 	  from 'left' and 'right' for which there are BUNs in 'left'
 	  and 'right' with equal tails";
-
-command join(left:bat[:oid,:any_2], rl:bat[:oid,:any_2], rh:bat[:oid,:any_2], li:bit, hi:bit)
-		(l:bat[:oid,:oid],r:bat[:oid,:oid])
-address ALGrangejoin2
-comment "Deprecated, see algebra.subrangejoin. Range join";
 
 command subjoin(l:bat[:oid,:any_1],r:bat[:oid,:any_1],sl:bat[:oid,:oid],sr:bat[:oid,:oid],nil_matches:bit,estimate:lng) (:bat[:oid,:oid],:bat[:oid,:oid])
 address ALGsubjoin
