@@ -3,5 +3,5 @@ R:= bat.new(:oid,:int);
 S:= bat.new(:oid,:int);
 E1:= algebra.select(R,1,3);
 E2:= algebra.select(S,4,9);
-(J1,J2):= algebra.join(E1,E2);
+(J1,J2):= algebra.subjoin(E1,E2,nil:bat,nil:bat,false,nil:lng);
 optimizer.dumpQEP();
