@@ -7,9 +7,9 @@ a:= algebra.subselect(T1,1@0,3@0,true,true,false);
 b:= algebra.subselect(T2,1@0,3@0,true,true,false);
 c:= algebra.subselect(T3,0@0,5@0,true,true,false);
 d:= algebra.subselect(T4,0@0,5@0,true,true,false);
-(e,ex):= algebra.join(a,c);
-(f,fx):= algebra.join(b,d);
-(h,hx):= algebra.join(e,f);
+(e,ex):= algebra.subjoin(a,c,nil:bat,nil:bat,false,nil:lng);
+(f,fx):= algebra.subjoin(b,d,nil:bat,nil:bat,false,nil:lng);
+(h,hx):= algebra.subjoin(e,f,nil:bat,nil:bat,false,nil:lng);
 end q;
 optimizer.dumpQEP("user","q");
 user.q();
