@@ -355,13 +355,9 @@ OPTpushselectImplementation(Client cntxt, MalBlkPtr mb, MalStkPtr stk, InstrPtr 
 		}
 		else if ( (GDKdebug & (1<<15)) &&
 			 isMatJoinOp(p) && p->retc == 2
-			 && !(getFunctionId(p) == joinRef && p->argc > 4)
 			 ) { 
 			int ltid = 0, rtid = 0, done = 0;
 			int range = 0;
-
-			if(getFunctionId(p) == joinRef)
-				range = (p->argc >= 4);
 
 			if ((ltid = subselect_find_tids(&subselects, getArg(p, 0))) >= 0 && 
 			    (rtid = subselect_find_tids(&subselects, getArg(p, 1))) >= 0) {
@@ -381,10 +377,7 @@ OPTpushselectImplementation(Client cntxt, MalBlkPtr mb, MalStkPtr stk, InstrPtr 
 				p = pushBit(mb, p, FALSE); /* do not match nils */
 				p = pushNil(mb, p, TYPE_lng); /* no estimate */
 
-				/* TODO join* -> subjoin* */
-				if(getFunctionId(p) == joinRef)
-					getFunctionId(p) = subjoinRef;
-				else if(getFunctionId(p) == thetajoinRef)
+				if(getFunctionId(p) == thetajoinRef)
 					getFunctionId(p) = subthetajoinRef;
 				else if(getFunctionId(p) == bandjoinRef)
 					getFunctionId(p) = subbandjoinRef;
