@@ -2,6 +2,7 @@
 # This file is updated with Maddlog
 
 * Thu Dec  3 2015 Sjoerd Mullender <sjoerd@acm.org>
+- Removed algebra.join.  Use algebra.subjoin instead.
 - Removed algebra.antijoin.  Use algebra.subantijoin or
   algebra.subthetajoin instead.
 
